--- a/invoice.html
+++ b/invoice.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="text-right">
                     <h2 class="text-3xl font-bold text-gray-800">INVOICE</h2>
-                    <p class="text-gray-500 mt-1">#INV-2025-07-00123</p>
+                    <p class="text-gray-500 mt-1">#INV-2025-08-00123</p>
                 </div>
             </header>
 
@@ -69,8 +69,8 @@
             <section class="grid grid-cols-2 gap-8 mb-10">
                 <div>
                     <h3 class="text-sm font-semibold text-gray-500 uppercase tracking-wider mb-2">Ditagihkan Kepada</h3>
-                    <p id="customer-name" class="font-bold text-gray-800">Ode</p>
-                    <p id="customer-email" class="text-gray-600">085285454563</p>
+                    <p id="customer-name" class="font-bold text-gray-800">Senrima</p>
+                    <p id="customer-email" class="text-gray-600">me@mail.s-tools.id</p>
                 </div>
                 <div class="text-right">
                     <h3 class="text-sm font-semibold text-gray-500 uppercase tracking-wider mb-2">Detail Transaksi</h3>
@@ -123,6 +123,31 @@
                 </div>
             </section>
 
+            <!-- Ketentuan Pembelian (DIPERBARUI) -->
+            <section class="mt-10 pt-8 border-t border-gray-200">
+                <h3 class="text-lg font-semibold text-gray-800 mb-4">Ketentuan Pembelian</h3>
+                <ul class="space-y-3 text-gray-600 text-sm list-disc list-inside">
+                    <li>
+                        <strong>Akses Produk:</strong> Pembelian ini memberikan Anda akses <strong class="text-indigo-600">Lifetime</strong> ke produk. Anda dapat mengaksesnya kapan saja melalui dashboard akun Anda sesuai dengan <a href="syarat-ketentuan.html" target="_blank" class="text-indigo-600 hover:underline">syarat dan ketentuan</a> yang berlaku.
+                    </li>
+                    <li>
+                        <strong>Bonus:</strong> Semua bonus yang tertera pada halaman penjualan telah disertakan dan dapat diakses bersamaan dengan produk utama.
+                    </li>
+                    <li>
+                        <strong>Koin S-Tools:</strong> Anda akan menerima <strong class="text-green-600">1 Koin</strong> yang akan ditambahkan ke akun Anda setelah pembayaran ini diverifikasi. Koin dapat digunakan untuk mendapatkan diskon pada pembelian berikutnya.
+                    </li>
+                    <li>
+                        <strong>Dukungan:</strong> Anda berhak mendapatkan dukungan teknis terkait produk ini selama 30 hari melalui email <a href="mailto:me@mail.s-tools.id" class="text-indigo-600 hover:underline">me@mail.s-tools.id</a>.
+                    </li>
+                    <li>
+                        <strong>Lisensi:</strong> Produk ini dilisensikan untuk penggunaan pribadi atau bisnis internal Anda dan tidak untuk dijual kembali.
+                    </li>
+                    <li>
+                        <strong>Pembelian Afiliasi:</strong> Jika Anda melakukan pembelian melalui link afiliasi, bonus atau penawaran khusus lainnya akan diatur dan dikirimkan langsung oleh partner afiliasi masing-masing.
+                    </li>
+                </ul>
+            </section>
+
             <!-- Footer Invoice -->
             <footer class="mt-12 pt-8 border-t border-gray-200 text-center">
                 <p class="text-gray-600">Terima kasih atas pembelian Anda!</p>
@@ -133,17 +158,7 @@
     </div>
 
     <script>
-        // Logika untuk Menu Mobile (jika diperlukan di halaman lain)
-        const menuBtn = document.getElementById('menu-btn');
-        if (menuBtn) {
-            const mobileMenu = document.getElementById('mobile-menu');
-            menuBtn.addEventListener('click', () => {
-                mobileMenu.classList.toggle('hidden');
-            });
-        }
-
-        // Nanti, Anda bisa mengisi data invoice ini secara dinamis
-        // menggunakan JavaScript berdasarkan data dari server.
+        // ... (JavaScript Anda tetap sama)
     </script>
 </body>
 </html>
