--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                 <div>
                     <h4 class="text-lg font-semibold text-white mb-4 tracking-wider">Navigasi</h4>
                     <ul class="space-y-3">
-                        <li><a href="#tentang" class="hover:text-white transition-colors">Tentang Kami</a></li>
-                        <li><a href="#layanan" class="hover:text-white transition-colors">Layanan</a></li>
+                        <li><a href="/#tentang" class="hover:text-white transition-colors">Tentang Kami</a></li>
+                        <li><a href="/#layanan" class="hover:text-white transition-colors">Layanan</a></li>
                         <li><a href="view.html" class="hover:text-white transition-colors">Produk</a></li>
                     </ul>
                 </div>
@@ -382,3 +382,4 @@
     </script>
 </body>
 </html>
+
