--- a/invoice.html
+++ b/invoice.html
@@ -156,7 +156,7 @@
                         <strong>Bonus:</strong> Semua bonus yang tertera pada halaman penjualan telah disertakan dan dapat diakses bersamaan dengan produk utama.
                     </li>
                     <li>
-                        <strong>Koin S-Tools:</strong> Anda akan menerima <strong class="text-green-600">1 Koin</strong> yang akan ditambahkan ke akun Anda setelah pembayaran ini diverifikasi. Koin dapat digunakan untuk mendapatkan diskon pada pembelian berikutnya.
+                        <strong>Koin S-Tools:</strong> Untuk pembayaran Transfer Bank Anda akan menerima <strong class="text-green-600">1 Koin</strong> yang akan ditambahkan ke akun Anda setelah pembayaran ini diverifikasi. Koin dapat digunakan untuk mendapatkan diskon pada pembelian berikutnya.
                     </li>
                     <li>
                         <strong>Dukungan:</strong> Anda berhak mendapatkan dukungan teknis terkait produk ini selama 30 hari melalui email <a href="mailto:me@mail.s-tools.id" class="text-indigo-600 hover:underline">me@mail.s-tools.id</a>.
@@ -272,3 +272,4 @@
     </script>
 </body>
 </html>
+
