--- a/invoice.html
+++ b/invoice.html
@@ -150,13 +150,16 @@
                 <h3 class="text-lg font-semibold text-gray-800 mb-4">Ketentuan Pembelian</h3>
                 <ul class="space-y-3 text-gray-600 text-sm list-disc list-inside">
                     <li>
+                        <strong>Memiliki Akun:</strong> Pastikan Anda sudah memilki akun di S-tools ID sesuai dengan email yang anda gunakan untuk membeli, jika belum memilki akun bisa kelik <a href="https://s-tools.id/app/daftar.html" target="_blank" class="text-indigo-600 hover:underline">daftar</a> dan pastikan menggunakan email pembelian produk.
+                    </li>
+                    <li>
                         <strong>Akses Produk:</strong> Pembelian ini memberikan Anda akses ke produk. Anda dapat mengaksesnya kapan saja melalui dashboard akun Anda sesuai dengan <a href="syarat-ketentuan.html" target="_blank" class="text-indigo-600 hover:underline">syarat dan ketentuan</a> yang berlaku.
                     </li>
                     <li>
                         <strong>Bonus:</strong> Semua bonus yang tertera pada halaman penjualan telah disertakan dan dapat diakses bersamaan dengan produk utama.
                     </li>
                     <li>
-                        <strong>Koin S-Tools:</strong> Untuk pembayaran Transfer Bank Anda akan menerima <strong class="text-green-600">1 Koin</strong> yang akan ditambahkan ke akun Anda setelah pembayaran ini diverifikasi. Koin dapat digunakan untuk mendapatkan diskon pada pembelian berikutnya.
+                        <strong>Koin S-Tools:</strong> Metode pembayaran Transfer Bank yang menggunakan angka unik Anda akan menerima <strong class="text-green-600">1 Koin</strong> yang akan ditambahkan ke akun Anda setelah pembayaran ini diverifikasi. Koin dapat digunakan untuk mendapatkan diskon pada pembelian berikutnya.
                     </li>
                     <li>
                         <strong>Dukungan:</strong> Anda berhak mendapatkan dukungan teknis terkait produk ini selama 30 hari melalui email <a href="mailto:me@mail.s-tools.id" class="text-indigo-600 hover:underline">me@mail.s-tools.id</a>.
@@ -272,4 +275,5 @@
     </script>
 </body>
 </html>
+
 
