--- a/checkout.html
+++ b/checkout.html
@@ -32,42 +32,22 @@
 </head>
 <body class="bg-gray-50">
 
-    <!-- Header Section -->
+    <!-- Header Section (DIPERBARUI) -->
     <header class="bg-white/90 backdrop-blur-lg sticky top-0 z-50 border-b border-gray-200">
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="/" class="flex items-center gap-3 text-2xl font-bold text-gray-900">
-                    <img src="stools_logo.png" alt="Logo S-Tools ID" class="h-8 w-auto">
+                    <img src="https://s-tools.id/aset/stools_logo.png" alt="Logo S-Tools ID" class="h-8 w-auto">
                     <span>S-Tools ID</span>
                 </a>
-                <!-- Navigasi Desktop -->
-                <nav class="hidden md:flex items-center space-x-8">
-                    <a href="/#tentang" class="text-gray-600 hover:text-indigo-600 transition-colors">Tentang</a>
-                    <a href="/#layanan" class="text-gray-600 hover:text-indigo-600 transition-colors">Layanan</a>
-                    <a href="view.html" class="text-gray-600 hover:text-indigo-600 transition-colors">Produk</a>
-                    <a href="/#kontak" class="text-gray-600 hover:text-indigo-600 transition-colors">Kontak</a>
-                    <a href="https://s-tools.id/app/" class="bg-gradient-to-r from-indigo-600 to-blue-500 text-white px-5 py-2.5 rounded-lg font-semibold hover:opacity-90 transition-all transform hover:scale-105">
+                <div class="flex items-center gap-4">
+                    <a href="javascript:history.back()" class="text-gray-600 hover:text-indigo-600 font-semibold text-sm">
+                        &larr; Kembali
+                    </a>
+                    <a href="https://s-tools.id/app/" class="bg-gradient-to-r from-indigo-600 to-blue-500 text-white px-5 py-2.5 rounded-lg font-semibold hover:opacity-90 text-sm">
                         Akses
                     </a>
-                </nav>
-                <!-- Tombol Hamburger untuk Mobile -->
-                <div class="md:hidden">
-                    <button id="menu-btn" class="text-gray-800 hover:text-indigo-600 focus:outline-none">
-                        <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
-                        </svg>
-                    </button>
                 </div>
-            </div>
-            <!-- Navigasi Mobile -->
-            <div id="mobile-menu" class="hidden md:hidden mt-4">
-                <a href="/#tentang" class="block py-2 px-4 text-gray-600 hover:bg-gray-100 rounded-lg">Tentang</a>
-                <a href="/#layanan" class="block py-2 px-4 text-gray-600 hover:bg-gray-100 rounded-lg">Layanan</a>
-                <a href="view.html" class="block py-2 px-4 text-gray-600 hover:bg-gray-100 rounded-lg">Produk</a>
-                <a href="/#kontak" class="block py-2 px-4 text-gray-600 hover:bg-gray-100 rounded-lg">Kontak</a>
-                <a href="https://s-tools.id/app/" class="block text-center mt-4 bg-gradient-to-r from-indigo-600 to-blue-500 text-white px-5 py-2.5 rounded-lg font-semibold hover:opacity-90 w-full">
-                    Akses
-                </a>
             </div>
         </div>
     </header>
@@ -546,5 +526,6 @@
     </script>
 </body>
 </html>
+
 
 
