--- a/view-mlt.html
+++ b/view-mlt.html
@@ -28,27 +28,33 @@
                     <img src="stools_logo.png" alt="S-Tools ID Logo" class="h-8 w-auto">
                     <span>S-Tools ID</span>
                 </a>
-                <nav class="hidden md:flex items-center space-x-8">
-                    <a href="/#tentang" class="text-gray-600 hover:text-indigo-600 transition-colors">Tentang</a>
-                    <a href="/#layanan" class="text-gray-600 hover:text-indigo-600 transition-colors">Layanan</a>
-                    <a href="view.html" class="text-indigo-600 font-semibold">Produk</a>
-                    <a href="/#kontak" class="text-gray-600 hover:text-indigo-600 transition-colors">Kontak</a>
+                
+                <div class="hidden md:flex items-center gap-6">
+                    <nav class="flex items-center space-x-8">
+                        <a href="/#tentang" class="text-gray-600 hover:text-indigo-600 transition-colors">Tentang</a>
+                        <a href="/#layanan" class="text-gray-600 hover:text-indigo-600 transition-colors">Layanan</a>
+                        <a href="view.html" class="text-indigo-600 font-semibold">Produk</a>
+                        <a href="/#kontak" class="text-gray-600 hover:text-indigo-600 transition-colors">Kontak</a>
+                    </nav>
+                    <a href="keranjang.html" class="relative text-gray-600 hover:text-indigo-600">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
+                        <span id="cart-count-desktop" class="absolute -top-2 -right-2 bg-red-600 text-white text-xs font-bold rounded-full h-5 w-5 flex items-center justify-center">0</span>
+                    </a>
                     <a href="https://s-tools.id/app/" class="bg-gradient-to-r from-indigo-600 to-blue-500 text-white px-5 py-2.5 rounded-lg font-semibold hover:opacity-90 transition-all transform hover:scale-105">
                         Akses
                     </a>
-                </nav>
-                <div class="flex items-center gap-4">
-                    <a href="keranjang.html" class="relative text-gray-600 hover:text-indigo-600">
+                </div>
+
+                <div class="md:hidden flex items-center gap-4">
+                     <a href="keranjang.html" class="relative text-gray-600 hover:text-indigo-600">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
-                        <span id="cart-count" class="absolute -top-2 -right-2 bg-red-600 text-white text-xs font-bold rounded-full h-5 w-5 flex items-center justify-center">0</span>
+                        <span id="cart-count-mobile" class="absolute -top-2 -right-2 bg-red-600 text-white text-xs font-bold rounded-full h-5 w-5 flex items-center justify-center">0</span>
                     </a>
-                    <div class="md:hidden">
-                        <button id="menu-btn" class="text-gray-800 hover:text-indigo-600 focus:outline-none">
-                            <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
-                            </svg>
-                        </button>
-                    </div>
+                    <button id="menu-btn" class="text-gray-800 hover:text-indigo-600 focus:outline-none">
+                        <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+                        </svg>
+                    </button>
                 </div>
             </div>
             <div id="mobile-menu" class="hidden md:hidden mt-4">
@@ -173,7 +179,7 @@
                 name: product.NamaProduk,
                 price: product.Harga,
                 image: product.GambarURL,
-                category: product.Kategori // Tambahkan kategori untuk logika invoice
+                category: product.Kategori
             };
             const productDataString = JSON.stringify(productData);
 
@@ -184,13 +190,18 @@
             ` : '';
 
             const buttonsHTML = `
-                <div class="mt-auto pt-4 grid grid-cols-2 gap-3">
-                    <button onclick='addToCart(${productDataString})' class="block w-full text-center bg-white border border-gray-300 text-gray-700 font-semibold py-3 px-4 rounded-lg hover:bg-gray-100 transition-colors">
-                        + Keranjang
-                    </button>
-                    <button onclick='buyNow(${productDataString})' class="block w-full text-center bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-4 rounded-lg transition-colors">
-                        ${product.TombolTeks}
-                    </button>
+                <div class="mt-auto pt-4 space-y-3">
+                    <div class="flex items-center gap-3">
+                        <button onclick='addToCart(${productDataString})' class="flex-shrink-0 h-12 w-12 flex items-center justify-center bg-indigo-100 text-indigo-600 rounded-lg hover:bg-indigo-200 transition-colors" title="Tambah ke Keranjang">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
+                        </button>
+                        <button onclick='buyNow(${productDataString})' class="flex-grow block w-full text-center bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-4 rounded-lg transition-colors">
+                            ${product.TombolTeks}
+                        </button>
+                    </div>
+                    <a href="${product.LandingPageURL}" target="_blank" class="block w-full text-center text-indigo-600 font-semibold py-2 rounded-lg hover:bg-indigo-50 transition-colors text-sm">
+                        Pelajari Selengkapnya
+                    </a>
                 </div>
             `;
 
