--- a/keranjang.html
+++ b/keranjang.html
@@ -46,7 +46,7 @@
                 
                 <!-- Column 1: Brand -->
                 <div>
-                    <a href="#" class="flex items-center gap-3 text-2xl font-bold text-white mb-4">
+                    <a href="/#" class="flex items-center gap-3 text-2xl font-bold text-white mb-4">
                         <img src="https://s-tools.id/aset/stools_putih_logo.png" alt="S-Tools ID Logo" class="h-8 w-auto">
                         <span>S-Tools ID</span>
                     </a>
@@ -107,4 +107,5 @@
     </script>
 </body>
 </html>
+
 
