--- a/keranjang.html
+++ b/keranjang.html
@@ -19,9 +19,20 @@
 </head>
 <body class="bg-gray-50">
 
-    <!-- Header Section -->
     <header class="bg-white/90 backdrop-blur-lg sticky top-0 z-50 border-b border-gray-200">
-        <!-- ... (Salin kode header dari halaman lain) ... -->
+        <div class="container mx-auto px-6 py-4">
+            <div class="flex justify-between items-center">
+                <a href="/" class="flex items-center gap-3 text-2xl font-bold text-gray-900">
+                    <img src="stools_logo.png" alt="Logo S-Tools ID" class="h-8 w-auto">
+                    <span>S-Tools ID</span>
+                </a>
+                <div class="flex items-center gap-4">
+                    <a href="view.html" class="text-gray-600 hover:text-indigo-600 font-semibold text-sm">
+                        &larr; Lanjut Belanja
+                    </a>
+                </div>
+            </div>
+        </div>
     </header>
 
     <main>
@@ -59,7 +70,7 @@
                     <ul class="space-y-3">
                         <li><a href="/#tentang" class="hover:text-white transition-colors">Tentang Kami</a></li>
                         <li><a href="/#layanan" class="hover:text-white transition-colors">Layanan</a></li>
-                        <li><a href="https://s-tools.id/produk/view-mlt.html" class="hover:text-white transition-colors">Produk</a></li>
+                        <li><a href="https://s-tools.id/produk/view.html" class="hover:text-white transition-colors">Produk</a></li>
                     </ul>
                 </div>
 
@@ -107,5 +118,6 @@
     </script>
 </body>
 </html>
+
 
 
