--- a/view.html
+++ b/view.html
@@ -100,8 +100,8 @@
                 
                 <!-- Column 1: Brand -->
                 <div>
-                    <a href="/" class="flex items-center gap-3 text-2xl font-bold text-white mb-4">
-                        <img src="stools_logo.png" alt="S-Tools ID Logo" class="h-8 w-auto">
+                    <a href="/#" class="flex items-center gap-3 text-2xl font-bold text-white mb-4">
+                        <img src="https://s-tools.id/aset/stools_putih_logo.png" alt="S-Tools ID Logo" class="h-8 w-auto">
                         <span>S-Tools ID</span>
                     </a>
                     <p class="text-gray-400 text-sm">Menyediakan alat bantu AI dan Otomatisasi untuk meningkatkan produktivitas dan kreativitas Anda.</p>
@@ -113,7 +113,7 @@
                     <ul class="space-y-3">
                         <li><a href="/#tentang" class="hover:text-white transition-colors">Tentang Kami</a></li>
                         <li><a href="/#layanan" class="hover:text-white transition-colors">Layanan</a></li>
-                        <li><a href="View.html" class="hover:text-white transition-colors">Produk</a></li>
+                        <li><a href="https://s-tools.id/produk/view.html" class="hover:text-white transition-colors">Produk</a></li>
                     </ul>
                 </div>
 
@@ -121,11 +121,11 @@
                 <div>
                     <h4 class="text-lg font-semibold text-white mb-4 tracking-wider">Legalitas</h4>
                     <ul class="space-y-3">
-                        <li><a href="kebijakan-privasi.html" class="hover:text-white transition-colors">Kebijakan Privasi</a></li>
-                        <li><a href="syarat-ketentuan.html" class="hover:text-white transition-colors">Syarat & Ketentuan</a></li>
+                        <li><a href="https://s-tools.id/aset/kebijakan-privasi.html" class="hover:text-white transition-colors">Kebijakan Privasi</a></li>
+                        <li><a href="https://s-tools.id/aset/syarat-ketentuan.html" class="hover:text-white transition-colors">Syarat & Ketentuan</a></li>
                     </ul>
                 </div>
-
+                
                 <!-- Column 4: Hubungi Kami -->
                 <div>
                     <h4 class="text-lg font-semibold text-white mb-4 tracking-wider">Hubungi Kami</h4>
@@ -323,3 +323,4 @@
     </script>
 </body>
 </html>
+
