--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <ul class="space-y-3">
                         <li><a href="#tentang" class="hover:text-white transition-colors">Tentang Kami</a></li>
                         <li><a href="#layanan" class="hover:text-white transition-colors">Layanan</a></li>
-                        <li><a href="View.html" class="hover:text-white transition-colors">Produk</a></li>
+                        <li><a href="view.html" class="hover:text-white transition-colors">Produk</a></li>
                     </ul>
                 </div>
 
@@ -322,7 +322,7 @@
                 <div class="reveal">
                     <div class="flex justify-between items-center mb-6">
                         <h3 class="text-2xl font-bold text-gray-900">${categoryTitle} Unggulan</h3>
-                        <a href="View.html" class="inline-block bg-white text-indigo-600 font-semibold py-2 px-5 rounded-lg border border-gray-300 hover:bg-indigo-50 transition-colors text-sm">Lihat Semua</a>
+                        <a href="view.html" class="inline-block bg-white text-indigo-600 font-semibold py-2 px-5 rounded-lg border border-gray-300 hover:bg-indigo-50 transition-colors text-sm">Lihat Semua</a>
                     </div>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
                         ${productCardsHTML}
@@ -424,3 +424,4 @@
     </script>
 </body>
 </html>
+
