--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <!-- Column 1: Brand -->
                 <div>
                     <a href="#" class="flex items-center gap-3 text-2xl font-bold text-white mb-4">
-                        <img src="stools_logo.png" alt="S-Tools ID Logo" class="h-8 w-auto">
+                        <img src="https://s-tools.id/aset/stools_putih_logo.png" alt="S-Tools ID Logo" class="h-8 w-auto">
                         <span>S-Tools ID</span>
                     </a>
                     <p class="text-gray-400 text-sm">Menyediakan alat bantu AI dan Otomatisasi untuk meningkatkan produktivitas dan kreativitas Anda.</p>
@@ -424,4 +424,5 @@
     </script>
 </body>
 </html>
+
 
