--- a/checkout.html
+++ b/checkout.html
@@ -148,9 +148,61 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-white py-8 border-t border-gray-200">
-        <div class="container mx-auto px-6 text-center text-gray-500">
-            <p>&copy; 2025 S-Tools ID. Semua Hak Cipta Dilindungi.</p>
+    <footer id="kontak" class="bg-gray-900 text-gray-300 pt-16 pb-8 scroll-mt-20">
+        <div class="container mx-auto px-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 mb-10">
+                
+                <!-- Column 1: Brand -->
+                <div>
+                    <a href="/#" class="flex items-center gap-3 text-2xl font-bold text-white mb-4">
+                        <img src="https://s-tools.id/aset/stools_putih_logo.png" alt="S-Tools ID Logo" class="h-8 w-auto">
+                        <span>S-Tools ID</span>
+                    </a>
+                    <p class="text-gray-400 text-sm">Menyediakan alat bantu AI dan Otomatisasi untuk meningkatkan produktivitas dan kreativitas Anda.</p>
+                </div>
+
+                <!-- Column 2: Navigasi Cepat -->
+                <div>
+                    <h4 class="text-lg font-semibold text-white mb-4 tracking-wider">Navigasi</h4>
+                    <ul class="space-y-3">
+                        <li><a href="/#tentang" class="hover:text-white transition-colors">Tentang Kami</a></li>
+                        <li><a href="/#layanan" class="hover:text-white transition-colors">Layanan</a></li>
+                        <li><a href="https://s-tools.id/produk/view.html" class="hover:text-white transition-colors">Produk</a></li>
+                    </ul>
+                </div>
+
+                <!-- Column 3: Legalitas -->
+                <div>
+                    <h4 class="text-lg font-semibold text-white mb-4 tracking-wider">Legalitas</h4>
+                    <ul class="space-y-3">
+                        <li><a href="https://s-tools.id/aset/kebijakan-privasi.html" class="hover:text-white transition-colors">Kebijakan Privasi</a></li>
+                        <li><a href="https://s-tools.id/aset/syarat-ketentuan.html" class="hover:text-white transition-colors">Syarat & Ketentuan</a></li>
+                    </ul>
+                </div>
+                
+                <!-- Column 4: Hubungi Kami -->
+                <div>
+                    <h4 class="text-lg font-semibold text-white mb-4 tracking-wider">Hubungi Kami</h4>
+                    <ul class="space-y-4">
+                        <li class="flex items-start gap-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400 mt-1 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M17.657 16.573l-4.243 4.243a2 2 0 01-2.828 0l-4.243-4.243a8 8 0 1111.314 0z" /><path stroke-linecap="round" stroke-linejoin="round" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
+                            <span class="text-gray-400">Raihan Sweet Home B13, Maros, Indonesia</span>
+                        </li>
+                        <li class="flex items-center gap-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" /></svg>
+                            <a href="mailto:me@mail.s-tools.id" class="hover:text-white transition-colors">me@mail.s-tools.id</a>
+                        </li>
+                        <li class="flex items-center gap-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400 flex-shrink-0" fill="currentColor" viewBox="0 0 16 16"><path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/></svg>
+                            <a href="https://wa.me/6285175078763" target="_blank" class="hover:text-white transition-colors">+62 851-7507-8763</a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-500">
+                <p>&copy; 2025 S-Tools ID. Semua Hak Cipta Dilindungi.</p>
+            </div>
         </div>
     </footer>
 
@@ -432,4 +484,5 @@
     </script>
 </body>
 </html>
+
 
