Update view - Waktu Akses

--- a/view.html
+++ b/view.html
@@ -179,7 +179,8 @@
                 name: product.NamaProduk,
                 price: product.Harga,
                 image: product.GambarURL,
-                category: product.Kategori
+                category: product.Kategori,
+                waktuAkses: product.WaktuAkses
             };
             const productDataString = JSON.stringify(productData);
 
@@ -323,3 +324,4 @@
     </script>
 </body>
 </html>
+
