--- a/checkout.html
+++ b/checkout.html
@@ -129,7 +129,7 @@
                                                     <span class="ml-3 font-medium text-gray-800">QRIS</span>
                                                 </label>
                                                 <label for="paymentgateway" class="flex items-center p-4 border border-gray-300 rounded-lg cursor-not-allowed opacity-50">
-                                                    <input type="radio" id="paymentgateway" name="payment_method" value="paymentgateway" class="h-4 w-4 text-indigo-600" disabled>
+                                                    <input type="radio" id="paymentgateway" name="payment_method" value="paymentgateway" class="h-4 w-4 text-indigo-600" checked>
                                                     <span class="ml-3 font-medium text-gray-800">Payment Gateway</span>
                                                 </label>
                                             </div>
@@ -484,5 +484,6 @@
     </script>
 </body>
 </html>
+
 
 
