--- a/checkout.html
+++ b/checkout.html
@@ -121,14 +121,14 @@
                                             <label class="block text-sm font-medium text-gray-700 mb-2">Pilih Metode Pembayaran</label>
                                             <div class="space-y-3">
                                                 <label for="transfer" class="flex items-center p-4 border border-gray-300 rounded-lg has-[:checked]:border-indigo-600 has-[:checked]:bg-indigo-50 cursor-pointer">
-                                                    <input type="radio" id="transfer" name="payment_method" value="transfer" class="h-4 w-4 text-indigo-600" checked>
+                                                    <input type="radio" id="transfer" name="payment_method" value="transfer" class="h-4 w-4 text-indigo-600" >
                                                     <span class="ml-3 font-medium text-gray-800">Transfer Bank</span>
                                                 </label>
                                                 <label for="qris" class="flex items-center p-4 border border-gray-300 rounded-lg cursor-not-allowed opacity-50">
                                                     <input type="radio" id="qris" name="payment_method" value="qris" class="h-4 w-4 text-indigo-600" disabled>
                                                     <span class="ml-3 font-medium text-gray-800">QRIS</span>
                                                 </label>
-                                                <label for="paymentgateway" class="flex items-center p-4 border border-gray-300 rounded-lg cursor-not-allowed opacity-50">
+                                                <label for="paymentgateway" class="flex items-center p-4 border border-gray-300 rounded-lg has-[:checked]:border-indigo-600 has-[:checked]:bg-indigo-50 cursor-pointer">
                                                     <input type="radio" id="paymentgateway" name="payment_method" value="paymentgateway" class="h-4 w-4 text-indigo-600" checked>
                                                     <span class="ml-3 font-medium text-gray-800">Payment Gateway</span>
                                                 </label>
@@ -484,6 +484,7 @@
     </script>
 </body>
 </html>
+
 
 
 
