--- a/transfer.html
+++ b/transfer.html
@@ -69,17 +69,17 @@
                             <!-- Bank Details -->
                             <div>
                                 <p class="text-sm font-medium text-gray-500">Bank Tujuan</p>
-                                <p class="text-xl font-bold text-gray-800">Bank Central Asia (BCA)</p>
+                                <p class="text-xl font-bold text-gray-800">Bank Rakyat Indonesia (BRI)</p>
                             </div>
                             <div>
                                 <p class="text-sm font-medium text-gray-500">Atas Nama</p>
-                                <p class="text-xl font-bold text-gray-800">Senrima</p>
+                                <p class="text-xl font-bold text-gray-800">Senrima Margasandy</p>
                             </div>
                             <div>
                                 <p class="text-sm font-medium text-gray-500">Nomor Rekening</p>
                                 <!-- Tata Letak Responsif untuk Mobile -->
                                 <div class="flex flex-wrap items-center justify-between gap-2 bg-gray-100 p-3 rounded-lg">
-                                    <span id="account-number" class="text-lg sm:text-xl font-bold text-indigo-600 tracking-wider">8020 123 456</span>
+                                    <span id="account-number" class="text-lg sm:text-xl font-bold text-indigo-600 tracking-wider">005001157318509</span>
                                     <button onclick="copyToClipboard('account-number')" class="text-sm font-semibold text-indigo-600 hover:text-indigo-800 px-3 py-1">Salin</button>
                                 </div>
                             </div>
@@ -206,4 +206,5 @@
     </script>
 </body>
 </html>
+
 
