--- a/checkout-new.html
+++ b/checkout-new.html
@@ -51,6 +51,7 @@
                                         <label class="block text-sm font-medium text-gray-700 mb-2">Pilih Metode Pembayaran</label>
                                         <div id="payment-options-container" class="space-y-3">
                                             </div>
+                                    <p class="text-xs text-gray-500 mt-3 text-center">Tambahan biaya layanan mungkin berlaku sesuai metode pembayaran yang Anda pilih.</p>
                                     </div>
                                     <button type="submit" id="pay-now-btn" class="w-full ..." disabled>Bayar Sekarang</button>
                                 </fieldset>
@@ -66,6 +67,7 @@
         </footer>
 
     <script src="keranjang.js"></script>
-    <script src="js/checkout.js"></script>
+    <script src="checkout.js"></script>
 </body>
+
 </html>
