--- a/checkout-new.html
+++ b/checkout-new.html
@@ -67,7 +67,8 @@
         </footer>
 
     <script src="keranjang.js"></script>
-    <script src="checkout.js"></script>
+    <script src="js/checkout.js"></script>
 </body>
 
 </html>
+
