--- a/checkout-new.html
+++ b/checkout-new.html
@@ -6,7 +6,6 @@
     <title>Pembayaran - S-Tools ID</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     
     <style>
@@ -21,7 +20,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="/" class="flex items-center gap-3 text-2xl font-bold text-gray-900">
-                    <img src="aset/stools_logo.png" alt="Logo S-Tools ID" class="h-8 w-auto">
+                    <img src="https://s-tools.id/aset/stools_logo.png" alt="Logo S-Tools ID" class="h-8 w-auto">
                     <span>S-Tools ID</span>
                 </a>
                 <div class="flex items-center gap-4">
@@ -476,6 +475,7 @@
     </script>
 </body>
 </html>
+
 
 
 
