--- a/checkout-new.html
+++ b/checkout-new.html
@@ -314,7 +314,7 @@
                 });
                 const result = await response.json();
                 if (response.ok && (result.status === 'sukses' || result.status === 'success') && result.paymentLink) {
-                    //clearCart();
+                    clearCart();
                     window.location.href = result.paymentLink;
                 } else {
                     alert(result.message || 'Gagal membuat invoice. Silakan coba lagi.');
@@ -475,6 +475,7 @@
     </script>
 </body>
 </html>
+
 
 
 
