--- a/checkout.html
+++ b/checkout.html
@@ -304,7 +304,8 @@
             emailInput.value = responsePayload.email;
         
             // Langsung verifikasi & lompat ke pembayaran
-            userDetailsStep.classList.add('hidden'); // Sembunyikan form nama & email
+    //        userDetailsStep.classList.add('hidden'); // Sembunyikan form nama & email
+            userDetailsStep.disabled = true; 
             tokenVerificationStep.classList.add('hidden'); // Pastikan form OTP juga tersembunyi
             verificationSuccessMessage.classList.remove('hidden'); // Tampilkan pesan sukses
             paymentMethodStep.disabled = false; // Aktifkan metode pembayaran
@@ -526,6 +527,7 @@
     </script>
 </body>
 </html>
+
 
 
 
