--- a/keranjang.html
+++ b/keranjang.html
@@ -109,7 +109,7 @@
         </div>
     </footer>
 
-    <script src="keranjang.js"></script>
+    <script src="js/keranjang.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             renderCartPage(); // Panggil fungsi untuk merender halaman keranjang
@@ -118,6 +118,7 @@
     </script>
 </body>
 </html>
+
 
 
 
